# web-graphics

./: .gitignore  Cargo.toml  index.html  index.js  package-lock.json  package.json  web.config  webpack.config.js
src/: gl_setup.rs  helpers.rs  input.rs  keycode.rs  lib.rs  output.rs
src/cameras/: mod.rs  perspective.rs
src/math/: matrix.rs  old_mat.rs  tmp.rs  vector.rs
src/programs/: color_2d.rs  mod.rs  tridown.rs
src/scene_objects/: mod.rs  pivot.rs  scene_object.rs
src/scene_objects/three_d/: cube.rs  grid.rs  mod.rs  wire_cube.rs
src/scene_objects/two_d/: mod.rs  tridown.rs
src/shaders/: color_2d_frag.rs  color_2d_vert.rs  color_3d_frag.rs  color_3d_vert.rs  mod.rs
tests/: matrix.rs
