[package]
name = "web-graphics"
version = "0.1.0"
authors = ["Christopher Michael Sutton <christopher.sutton12@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.51"
lazy_static = "1.4.0"
nalgebra = "0.27.1"
wasm-bindgen = "0.2.74"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]